--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,14 @@
   margin: 0;
   padding: 0;
 }
+div {
+  width: 100%;
+  height: 100vh;
+}
+img {
+  width: 100%;
+}
+
+h1 {
+  text-align: center;
+}
